# hello-rust-actix-cloudrun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  alpine.Dockerfile  latest.Dockerfile  service.yaml
src/: main.rs
