[package]
name = "hello-actix"
version = "0.1.0"
authors = ["katopz"]
edition = "2018"

[dependencies]
actix-web = "4"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"