[package]
name = "hello-actix"
version = "0.1.0"
authors = ["katopz"]
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-test = "0.1.5"
actix-web = "4.9.0"
awc = "3.5.1"
serde = "1.0.214"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"
